fixed: rotating links on index page caused them to "jump"

--- a/frontpage/static/css/main.css
+++ b/frontpage/static/css/main.css
@@ -95,16 +95,18 @@ h3 {
     font-size:2em;
 }
 
-#wrapper {
-    padding:10px;
-}
-
 #panel {
     position:absolute;
     right:0px;
     top:0px;
     background-color:white;
     color:black;
+}
+
+#index_header {
+    position:absolute;
+    top:20px;
+    left:10px;
 }
 
 #navigation {
